--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 DB_NAME=railway
 DB_USER=root
 DB_PASSWORD=ekvIlOqvluslRpgEoYnwLEKahGBDnfvN
-DB_HOST=switchyard.proxy.rlwy.net
+DB_HOST=mysql.railway.internal
 JWT_SECRET_KEY=Th1s1s@Rand0m!Long$JWT#S3cr3tK3y123456
 JWT_EXPIRES=7d
 CLIENT_URL=http://localhost:3000
-PORT=18859
+PORT=3306
 EMAIL_USER=231210128@nitdelhi.ac.in
 EMAIL_PASS=gumo kbkn rmje dtki
 CLOUDINARY_CLOUD_NAME=dnhciqhrj
