--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ DB_PASSWORD=ekvIlOqvluslRpgEoYnwLEKahGBDnfvN
 DB_HOST=mysql.railway.internal
 JWT_SECRET_KEY=Th1s1s@Rand0m!Long$JWT#S3cr3tK3y123456
 JWT_EXPIRES=7d
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=https://medihub-eta.vercel.app
 PORT=3306
 EMAIL_USER=231210128@nitdelhi.ac.in
 EMAIL_PASS=gumo kbkn rmje dtki
