--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 DB_NAME=railway
 DB_USER=root
 DB_PASSWORD=ekvIlOqvluslRpgEoYnwLEKahGBDnfvN
-DB_HOST=mysql.railway.internal
+DB_HOST=switchyard.proxy.rlwy.net
 JWT_SECRET_KEY=Th1s1s@Rand0m!Long$JWT#S3cr3tK3y123456
 JWT_EXPIRES=7d
 CLIENT_URL=https://medihub-eta.vercel.app
-PORT=3306
+PORT=18859
 EMAIL_USER=231210128@nitdelhi.ac.in
 EMAIL_PASS=gumo kbkn rmje dtki
 CLOUDINARY_CLOUD_NAME=dnhciqhrj
@@ -13,4 +13,3 @@ CLOUDINARY_API_KEY=327651128738981
 CLOUDINARY_API_SECRET=2AlYcSR-JBWdQBV5GcTncSmZ5EA
 RAZORPAY_KEY_ID=rzp_test_1234567890abcdef
 RAZORPAY_KEY_SECRET=1234567890abcdef12345678
- 
